# tinytrace

./: .clang-format  .pre-commit-config.yaml  Cargo.toml  README.md  line_count.sh
benches/: bias.rs
crates/tinytrace_asset/: Cargo.toml
crates/tinytrace_asset/src/: import.rs  lib.rs  normal.rs  test.rs
crates/tinytrace_backend/: Cargo.toml
crates/tinytrace_backend/src/: copy.rs  error.rs  glsl.rs  handle.rs  instance.rs  lib.rs  resource.rs  shader.rs  surface.rs  sync.rs
crates/tinytrace_backend/src/test/: copy.rs  mod.rs  push_constant.glsl  shader.rs  timing.rs
crates/tinytrace_egui/: Cargo.toml
crates/tinytrace_egui/src/: draw.glsl  lib.rs
crates/tinytrace_viewer/: Cargo.toml
crates/tinytrace_viewer/src/: lib.rs
examples/: render.rs  viewer.rs
scenes/: cornell_box.gltf
src/: camera.rs  config.rs  error.rs  hash_grid.rs  lib.rs  scene.rs
src/asset/: gltf.rs  import.rs  material.rs  mod.rs  normal.rs  test.rs  texture.rs
src/backend/: command.rs  copy.rs  descriptor.rs  device.rs  glsl.rs  handle.rs  instance.rs  mod.rs  resource.rs  shader.rs  surface.rs  sync.rs  test.rs  timing.rs
src/backend/test/: copy.rs  copy_buffer.glsl  mod.rs  push_constant.glsl  shader.rs  timing.rs
src/includes/: brdf.glsl  constants.glsl  debug.glsl  hash_grid.glsl  light_sampling.glsl  math.glsl  octahedron.glsl  random.glsl  restir.glsl  sample.glsl  scene.glsl
src/integrate/: integrate.glsl  mod.rs  restir.rs  types.glsl  update_reservoirs.glsl
src/material/: bsdf.glsl  coat_brdf.glsl  diffuse_brdf.glsl  fresnel.glsl  fuzz_brdf.glsl  material.glsl  metal_brdf.glsl  microfacet.glsl  mod.rs  specular_brdf.glsl  specular_btdf.glsl  test.rs
src/math/: mod.rs
src/post_process/: display.glsl  mod.rs  tonemap.glsl
src/scene/: import.rs  mod.rs  normal.rs  test.rs
src/test/: mod.rs
test/: test.rs
tinytrace_egui/: Cargo.toml
tinytrace_egui/src/: draw.glsl  lib.rs  types.glsl
