[package]
name = "tinytrace"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/tinytrace_backend",
    "crates/tinytrace_egui",
    "crates/tinytrace_asset",
    "crates/tinytrace_viewer",
]

[dependencies]
glam = { version = "0.27.0", features = ["bytemuck"] }
thiserror = "1.0.59"
bytemuck = { version = "1.15.0", features = ["derive", "extern_crate_std"] }
raw-window-handle = "0.6.1"
half = { version = "2.4.1", features = ["bytemuck"] }
tinytrace_backend = { path = "crates/tinytrace_backend" }
tinytrace_asset = { path = "crates/tinytrace_asset" }

[dev-dependencies]
winit = { version = "0.30.5", features = ["rwh_06"] }
tinytrace_viewer = { path = "crates/tinytrace_viewer" }

[[example]]
name = "viewer"

[[bench]]
name = "bias"
harness = false
