[package]
name = "tinytrace_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "0.27.0", features = ["bytemuck"] }
ash = "0.38.0"
thiserror = "1.0.59"
shaderc = "0.8.3"
bytemuck = { version = "1.15.0", features = ["derive", "extern_crate_std"] }
raw-window-handle = "0.6.1"
half = { version = "2.4.1", features = ["bytemuck"] }
