[package]
name = "tinytrace_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "0.27.0", features = ["bytemuck"] }
winit = { version = "0.30.5", features = ["rwh_06"] }
egui = { version = "0.29" }
raw-window-handle = "0.6.1"
egui-winit = { version = "0.29" }
bit-set = "0.5.3"
tinytrace_egui = { path = "../tinytrace_egui" }
tinytrace_backend = { path = "../tinytrace_backend" }
tinytrace = { path = "../.." }
